syntax = "proto3";

option csharp_namespace = "Keysafe.ClaimService";

package claims;

import "google/protobuf/timestamp.proto";

service Claims {
	rpc CreateVerifiableClaims (VerifiableClaimsCreateRequest) returns (VerifiableClaimsCreateReply);
	rpc GetVerifiableClaims (VerifiableClaimRequest) returns (VerifiableClaimReply);
}

message User {
	string ssid = 1;
	string name = 2;
	string email = 3;
}

message Organization {
	string name = 1;
	string department = 2;
	string location = 3;
	string place_of_work = 4;
}

message Lock {
	string id = 1;
	string location_address = 2;
}

message VerifiableClaimsCreateRequest {
	string attest_uuid = 1;
	google.protobuf.Timestamp valid_from = 2;
	google.protobuf.Timestamp valid_to = 3;
	User user = 4;
	Organization organization = 5;
	Lock lock = 6;
	string channel_id = 7;
	string side_key = 8;
}

message VerifiableClaimsCreateReply {
	bool success = 1;
	string message = 2;
	string attest_hash = 3;
	string channel_root = 4;
}

message VerifiableClaimRequest {
	string channel_root = 1;
	string side_key = 2;
}

message VerifiableClaimReply {
	repeated VerifiableClaimReplyItem claims = 1;
}

message VerifiableClaimReplyItem {
	string attest_hash = 1;
	string next_root = 2;
	string channel_root = 3;
}